--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,8 @@ svg	{
 	padding: 5px 10px;
 	border-radius: 5px;
 	border: 1px solid #ccc; 
-	max-width: 400px;
+	width: 100%;
+	max-width: 350px;
 	font-size: 14px;
 	background-image: url('../icons/icon-search.svg');
 	background-repeat: no-repeat;
@@ -346,6 +347,54 @@ svg	{
 	padding: 12px 20px;
 }
 
+.social-icon-wrapper {
+	float: left;
+	height: 70px;
+	width: 70px;
+	background-color: #7377bf;
+	border-radius: 50%;
+	margin: 15px;
+	margin-right: 30px;
+}
+
+.social-icon	{
+	height: 35px;
+	width: 35px;
+	margin: 17.5px;
+}
+
+.social-type-head {
+	text-align: left;
+	font-size: 1.2em;
+	letter-spacing: .2em;
+	color: #7377bf;
+	margin-top: 16px;
+}
+
+.social-stats-number {
+	font-size: 2.5em;
+	font-weight: 300;
+	text-align: left;
+	color: #656565;
+	margin-top: -26px;
+}
+
+#twitter,
+#facebook,
+#google {
+	width: 100%;
+	border: 1px solid #ccc;
+	border-radius: 6px;
+	padding: 10px;
+	height: 120px;
+	background-color: #FAFAFA;
+}
+
+#facebook,
+#google {
+	margin-top: 16px;
+}
+
 
 /*************************************** 
 TABLET (768px)
@@ -387,11 +436,29 @@ TABLET (768px)
 	}
 	
 	#dailyTraffic-bar	{
-		width: 50%;
+		border-bottom: none;
 	}
 	#mobile-users	{
 		border-left: 1px solid #ccc;
+	}
+	
+	#dailyTraffic-bar,
+	#mobile-users	{
 		width: 50%;
+	}
+	
+/*SOCIAL STATS************************/
+	#twitter,
+	#facebook,
+	#google 	{
+		float: left;
+		width: 32%;
+	}
+	
+	#facebook, 
+	#google	{
+		margin-top: 0;
+		margin-left: 2%;
 	}
 
 }
@@ -454,5 +521,16 @@ DESKTOP (1024px)
 		border-bottom: none;
 	}
 	
+	.social-type-head {
+	font-size: 1.5em;
+
+	}
+	
+/*SOCIAL STATS************************/
+
+	.social-stats-number {
+		font-size: 2.8em;
+	}
+
 	
 }
